Full-bleed layout with fixed-width content - splash text

--- a/layout7/style.css
+++ b/layout7/style.css
@@ -51,3 +51,25 @@ p {
 .logo {
   font-size: 8em;
 }
+
+/* Splash section */
+
+.splash {
+	background: #FFF6E5;
+	padding-bottom: 2em;
+}
+
+.splash-content {
+  padding: 1.5em;
+}
+
+@media screen and (min-width: 600px) {
+  .splash-text {
+    columns: 2;
+    column-gap: 2em;
+  }
+
+  .splash-text p {
+    padding-top: 0;
+  }
+}
